vect: Don't pattern match BITFIELD_REF's of non-integrals [PR107226]

The original patch supported matching the vect_recog_bitfield_ref_pattern for
BITFIELD_REF's where the first operand didn't have a INTEGRAL_TYPE_P type.
That means it would also match vectors, leading to regressions in targets that
supported vectorization of those.

gcc/ChangeLog:

	PR tree-optimization/107226
	* tree-vect-patterns.cc (vect_recog_bitfield_ref_pattern): Reject
	BITFIELD_REF's with non integral typed first operands.